@@ -10,4 +10,7 @@ Zollern Galaxy v2.0.8
     - New players should be unaffected.
 * Modified default coordinates of Nova star system.
 * Created a specific block for Space Stations.
+* Created the Lore Block.
+    - Only spawns in Space Stations.
+    - Gives the Player a random Lore Book and then disappears.
 * 
